# CppGames

./: CMakeLists.txt  main.cpp
game_2048/: Cell.cpp  Cell.h  Chessboard.cpp  Chessboard.h  Forward.cpp  Forward.h  ForwardImpls.cpp  ForwardImpls.h  Game2048.cpp  Game2048.h  Piece.cpp  Piece.h  Point.h
game_2048_v2/: Cell.cpp  Cell.h  Chessboard.cpp  Chessboard.h  Game2048.cpp  Game2048.h  Point.h
